# sred_v2

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06c01b26649c_add_segment_offsets.py  402614c761a6_initial_schema.py  6a5589fb8054_drop_project_and_projectsegmentlink_.py  6f1889934df6_drop_pgvector_embedding_column.py  c62112cd3ef7_add_entity_anchors.py  d272c1cd5cb4_add_segment_structure.py  f9590c7da3a0_add_compliance_fields.py
audit_reports/: tournament_diff_20260201_170827.csv  tournament_diff_20260201_174728.csv  tournament_diff_20260201_193829.csv  tournament_diff_20260201_194230.csv  tournament_diff_20260201_195146.csv  tournament_summary_20260201_170827.csv  tournament_summary_20260201_192329.csv  tournament_summary_20260201_193829.csv  tournament_summary_20260201_194230.csv  tournament_summary_20260201_195146.csv
chroma_db/: chroma.sqlite3
scripts/: generate_final_claim.py  run_phase7_full.py  run_tournament.py  test_full_pipeline.py
src/sredi/: config.py  main.py
src/sredi/models/: __init__.py  enums.py  models.py
src/sredi/services/: clustering.py  compliance.py  decision_log_payload.py  enrichment.py  grouping.py  ingestion.py  llm_client.py  (+8 more)
test_data/: product-2.md  product_1.md  product_3.md
tests/: conftest.py  test_anchors.py  test_context_injection.py  test_grouping.py  test_ingestion.py  test_llm_router.py  test_models.py  test_quote_first.py  test_router.py  test_router_policy.py  test_segmentation.py  test_shadow_mode.py  test_status.py  test_validation.py  test_vector_recall.py
(+1 files in other folders)
