[project]
name = "sred-brain"
version = "0.1.0"
description = "SRED.ai MVP - Local CLI-first evidence brain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.4.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pytest-asyncio>=1.3.0",
    "langgraph>=0.0.10",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sredi"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
